- basic details for alchemy and crafting checks

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -306,7 +306,7 @@
         }
       }
 
-      .fabricate-create-recipe, .fabricate-create-component {
+      .fabricate-drop-zone {
         text-align: center;
         height: 68px;
         margin-bottom: 20px;
@@ -363,6 +363,11 @@
 
       }
 
+      .fabricate-alchemy-toggle, .fabricate-crafting-check-toggle {
+        label {
+          flex: 3;
+        }
+      }
     }
 
   }
