- fix copypasta issue

--- a/src/templates/partials/editable-crafting-system.hbs
+++ b/src/templates/partials/editable-crafting-system.hbs
@@ -288,7 +288,7 @@
             <div class="fabricate-crafting-check-toggle">
                 <form>
                     <div class="form-group">
-                        <label for="craftingChecksEnabled">Enable alchemy for this crafting system?</label>
+                        <label for="craftingChecksEnabled">Enable crafting checks for this system?</label>
                         <div class="form-fields">
                             <input name="craftingChecksEnabled" type="checkbox" data-action="toggleCraftingChecksEnabled" data-system-id="{{system.id}}">
                         </div>
