- break down template into partials per tab

--- a/src/templates/partials/editable-crafting-system.hbs
+++ b/src/templates/partials/editable-crafting-system.hbs
@@ -30,271 +30,26 @@
 <hr/>
 
 <nav data-group="fabricate" class="fabricate-crafting-system-navigation tabs">
-    <a class="item active" data-tab="recipes">Recipes</a>
-    <a class="item" data-tab="components">Components</a>
+    <a class="item active" data-tab="components">Components</a>
+    <a class="item" data-tab="recipes">Recipes</a>
+    <a class="item" data-tab="checks">Checks</a>
     <a class="item" data-tab="essences">Essences</a>
     <a class="item" data-tab="alchemy">Alchemy</a>
-    <a class="item" data-tab="checks">Checks</a>
 </nav>
 <section class="fabricate-crafting-system-body">
-    <div class="tab active" data-group="fabricate" data-tab="recipes">
-        <div class="fabricate-recipes">
-            <div class="fabricate-drop-zone" data-action="createRecipe">
-                <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item or click to create a recipe
-            </div>
-            <table class="fabricate-item-table">
-                <thead class="fabricate-item-table-header">
-                    <tr>
-                        <th>Image</th>
-                        <th>Name</th>
-                        <th>Produces</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody class="fabricate-item-table-body">
-                    <tr class="fabricate-item-table-row">
-                        <td class="fabricate-item-image">
-                            <img src="icons/sundries/documents/blueprint-recipe-magic.webp" data-action="editRecipe">
-                        </td>
-                        <td class="fabricate-item-name">
-                            Recipe name
-                        </td>
-                        <td>
-                            <div class="fabricate-inline-component-list">
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="fabricate-edit-item">
-                            <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                                <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                            </button>
-                            <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
-                                <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr class="fabricate-item-table-row">
-                        <td class="fabricate-item-image">
-                            <img src="icons/sundries/documents/blueprint-recipe-magic.webp" data-action="editRecipe">
-                        </td>
-                        <td class="fabricate-item-name">
-                            Recipe name
-                        </td>
-                        <td>
-                            <div class="fabricate-inline-component-list">
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="fabricate-edit-item">
-                            <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                                <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                            </button>
-                            <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
-                                <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr class="fabricate-item-table-row">
-                        <td class="fabricate-item-image">
-                            <img src="icons/sundries/documents/blueprint-recipe-magic.webp"  data-action="editRecipe">
-                        </td>
-                        <td class="fabricate-item-name">
-                            Recipe name
-                        </td>
-                        <td>
-                            <div class="fabricate-inline-component-list">
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                                <div class="fabricate-component" data-tooltip="Component Name">
-                                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                                    <div class="fabricate-info">
-                                        <span class="fabricate-detail">3</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="fabricate-edit-item">
-                            <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                                <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                            </button>
-                            <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
-                                <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
     <div class="tab" data-group="fabricate" data-tab="components">
-        <div class="fabricate-components">
-            <div class="fabricate-drop-zone" data-action="createComponent">
-                <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item or click to create a component
-            </div>
-            <div class="fabricate-component-list">
-                <div class="fabricate-component">
-                    <div class="fabricate-info">
-                        <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                        <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-                    </div>
-                    <span class="fabricate-component-name">Component name</span>
-                    <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-                </div>
-                <div class="fabricate-component">
-                    <div class="fabricate-info">
-                        <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                        <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-                    </div>
-                    <span class="fabricate-component-name">Component name</span>
-                    <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-                </div>
-                <div class="fabricate-component">
-                    <div class="fabricate-info">
-                        <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                        <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-                    </div>
-                    <span class="fabricate-component-name">Component name</span>
-                    <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-                </div>
-            </div>
-        </div>
+        {{> componentsTab}}
     </div>
-    <div class="tab" data-group="fabricate" data-tab="essences">
-        <button type="submit"><i class="fa-solid fa-circle-plus" data-action="createEssence" data-system-id="1"></i> Add a new Essence</button>
-        <table class="fabricate-item-table">
-            <thead class="fabricate-item-table-header">
-                <tr>
-                    <th>Preview</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody class="fabricate-item-table-body">
-                <tr class="fabricate-item-table-row">
-                    <td class="fabricate-essence-preview"><i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i></td>
-                    <td>Essence name</td>
-                    <td>Essence description</td>
-                    <td class="fabricate-edit-item">
-                        <button type="button" data-action="editEssence" data-recipe-id="essence-id" data-tooltip="Edit essence">
-                            <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                        </button>
-                        <button type="button" data-action="deleteEssence" data-recipe-id="essence-id" data-tooltip="Delete essence">
-                            <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                        </button>
-                    </td>
-                </tr>
-                <tr class="fabricate-item-table-row">
-                    <td class="fabricate-essence-preview"><i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i></td>
-                    <td>Essence name</td>
-                    <td>Essence description</td>
-                    <td class="fabricate-edit-item">
-                        <button type="button" data-action="editEssence" data-recipe-id="essence-id" data-tooltip="Edit essence">
-                            <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                        </button>
-                        <button type="button" data-action="deleteEssence" data-recipe-id="essence-id" data-tooltip="Delete essence">
-                            <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                        </button>
-                    </td>
-                </tr>
-                <tr class="fabricate-item-table-row">
-                    <td class="fabricate-essence-preview"><i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i></td>
-                    <td>Essence name</td>
-                    <td>Essence description</td>
-                    <td class="fabricate-edit-item">
-                        <button type="button" data-action="editEssence" data-recipe-id="essence-id" data-tooltip="Edit essence">
-                            <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                        </button>
-                        <button type="button" data-action="deleteEssence" data-recipe-id="essence-id" data-tooltip="Delete essence">
-                            <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="tab" data-group="fabricate" data-tab="alchemy">
-        <div class="fabricate-alchemy-formulae">
-            <p>
-                Alchemy is a process by which an item is modified by combining specific ingredients to produce one or more
-                effects. Not every crafting system includes alchemy. In fact, most crafting systems don't!
-            </p>
-            <hr/>
-            <div class="fabricate-alchemy-toggle">
-                <form>
-                    <div class="form-group">
-                        <label for="alchemyEnabled">Enable alchemy for this crafting system?</label>
-                        <div class="form-fields">
-                            <input name="alchemyEnabled" type="checkbox" data-action="toggleAlchemyEnabled" data-system-id="{{system.id}}">
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="tab active" data-group="fabricate" data-tab="recipes">
+        {{> recipesTab}}
     </div>
     <div class="tab" data-group="fabricate" data-tab="checks">
-        <div class="fabricate-crafting-checks">
-            <p>
-                Crafting checks are performed when there is a chance of failure in the crafting process.
-                The difficulty of crafting checks can be modified by things such as the skills of the crafter,
-                the challenge level of the recipe, the components used and more.
-            </p>
-            <p>If your crafting system does not have a chance of failure, you don't need to enable crafting checks.</p>
-            <hr/>
-            <div class="fabricate-crafting-check-toggle">
-                <form>
-                    <div class="form-group">
-                        <label for="craftingChecksEnabled">Enable crafting checks for this system?</label>
-                        <div class="form-fields">
-                            <input name="craftingChecksEnabled" type="checkbox" data-action="toggleCraftingChecksEnabled" data-system-id="{{system.id}}">
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+        {{> checksTab}}
+    </div>
+    <div class="tab" data-group="fabricate" data-tab="essences">
+        {{> essencesTab}}
+    </div>
+    <div class="tab" data-group="fabricate" data-tab="alchemy">
+        {{> alchemyTab}}
     </div>
 </section>
