- base implementation for component manager app

--- a/src/templates/partials/editable-crafting-system.hbs
+++ b/src/templates/partials/editable-crafting-system.hbs
@@ -30,7 +30,7 @@
 <hr/>
 
 <nav data-group="fabricate" class="fabricate-crafting-system-navigation tabs">
-    <a class="item active" data-tab="components">Components</a>
+    <a class="item" data-tab="components">Components</a>
     <a class="item" data-tab="recipes">Recipes</a>
     <a class="item" data-tab="checks">Checks</a>
     <a class="item" data-tab="essences">Essences</a>
