--- a/src/templates/partials/components-tab.hbs
+++ b/src/templates/partials/components-tab.hbs
@@ -1,31 +1,75 @@
 <div class="fabricate-components">
-    <div class="fabricate-drop-zone" data-action="createComponent">
-        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item or click to create a component
+    <p>
+        Components are the items that are consumed and produced by the crafting activities in your system.
+    </p>
+    <div class="fabricate-drop-zone" data-drop-trigger="createComponent">
+        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a component
     </div>
-    <div class="fabricate-component-list">
-        <div class="fabricate-component">
-            <div class="fabricate-info">
-                <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-            </div>
-            <span class="fabricate-component-name">Component name</span>
-            <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-        </div>
-        <div class="fabricate-component">
-            <div class="fabricate-info">
-                <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-            </div>
-            <span class="fabricate-component-name">Component name</span>
-            <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-        </div>
-        <div class="fabricate-component">
-            <div class="fabricate-info">
-                <span class="fabricate-button" data-tooltip="Delete" data-action="deleteComponent"><i class="fa-solid fa-xmark" style="pointer-events: none"></i></span>
-                <span class="fabricate-button" data-tooltip="Edit" data-action="editComponent"><i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i></span>
-            </div>
-            <span class="fabricate-component-name">Component name</span>
-            <img src="/icons/commodities/materials/bowl-liquid-red.webp" data-action="editComponent">
-        </div>
-    </div>
+    <table class="fabricate-item-table">
+        <thead class="fabricate-item-table-header">
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Essences</th>
+                <th>Salvage</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody class="fabricate-item-table-body">
+            <tr class="fabricate-item-table-row">
+                <td class="fabricate-item-image">
+                    <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                </td>
+                <td class="fabricate-item-name">
+                    Component name
+                </td>
+                <td>
+                    <div class="fabricate-essence-list">
+                        <span class="fabricate-essence-preview">
+                            <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                        </span>
+                        <span class="fabricate-essence-preview">
+                            2 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                        </span>
+                        <span class="fabricate-essence-preview">
+                            <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                        </span>
+                        <span class="fabricate-essence-preview">
+                            3 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                        </span>
+                    </div>
+                </td>
+                <td>
+                    <div class="fabricate-inline-component-list">
+                        <div class="fabricate-component" data-tooltip="Component Name">
+                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                            <div class="fabricate-info">
+                                <span class="fabricate-detail">3</span>
+                            </div>
+                        </div>
+                        <div class="fabricate-component" data-tooltip="Component Name">
+                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                            <div class="fabricate-info">
+                                <span class="fabricate-detail">3</span>
+                            </div>
+                        </div>
+                        <div class="fabricate-component" data-tooltip="Component Name">
+                            <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                            <div class="fabricate-info">
+                                <span class="fabricate-detail">3</span>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+                <td class="fabricate-edit-item">
+                    <button type="button" data-action="editComponent" data-part-id="part-id" data-tooltip="Edit component">
+                        <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
+                    </button>
+                    <button type="button" data-action="removeComponent" data-part-id="part-id" data-tooltip="Remove component">
+                        <i class="fa-solid fa-trash" style="pointer-events: none"></i>
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
