--- a/src/templates/partials/recipes-tab.hbs
+++ b/src/templates/partials/recipes-tab.hbs
@@ -1,13 +1,19 @@
 <div class="fabricate-recipes">
-    <div class="fabricate-drop-zone" data-action="createRecipe">
-        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item or click to create a recipe
+    <p>
+        Recipes provide characters with the ability to repeatedly craft components.
+    </p>
+    <div class="fabricate-drop-zone" data-drop-trigger="createRecipe">
+        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a recipe
     </div>
     <table class="fabricate-item-table">
         <thead class="fabricate-item-table-header">
         <tr>
-            <th>Image</th>
+            <th></th>
             <th>Name</th>
             <th>Produces</th>
+            <th>Consumes</th>
+            <th>Catalysts</th>
+            <th>Required Essences</th>
             <th></th>
         </tr>
         </thead>
@@ -41,21 +47,27 @@
                     </div>
                 </div>
             </td>
-            <td class="fabricate-edit-item">
-                <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                    <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                </button>
-                <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
-                    <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                </button>
-            </td>
-        </tr>
-        <tr class="fabricate-item-table-row">
-            <td class="fabricate-item-image">
-                <img src="icons/sundries/documents/blueprint-recipe-magic.webp" data-action="editRecipe">
-            </td>
-            <td class="fabricate-item-name">
-                Recipe name
+            <td>
+                <div class="fabricate-inline-component-list">
+                    <div class="fabricate-component" data-tooltip="Component Name">
+                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                        <div class="fabricate-info">
+                            <span class="fabricate-detail">3</span>
+                        </div>
+                    </div>
+                    <div class="fabricate-component" data-tooltip="Component Name">
+                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                        <div class="fabricate-info">
+                            <span class="fabricate-detail">3</span>
+                        </div>
+                    </div>
+                    <div class="fabricate-component" data-tooltip="Component Name">
+                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
+                        <div class="fabricate-info">
+                            <span class="fabricate-detail">3</span>
+                        </div>
+                    </div>
+                </div>
             </td>
             <td>
                 <div class="fabricate-inline-component-list">
@@ -79,49 +91,28 @@
                     </div>
                 </div>
             </td>
-            <td class="fabricate-edit-item">
-                <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
-                    <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
-                </button>
-                <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
-                    <i class="fa-solid fa-trash" style="pointer-events: none"></i>
-                </button>
-            </td>
-        </tr>
-        <tr class="fabricate-item-table-row">
-            <td class="fabricate-item-image">
-                <img src="icons/sundries/documents/blueprint-recipe-magic.webp"  data-action="editRecipe">
-            </td>
-            <td class="fabricate-item-name">
-                Recipe name
-            </td>
             <td>
-                <div class="fabricate-inline-component-list">
-                    <div class="fabricate-component" data-tooltip="Component Name">
-                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                        <div class="fabricate-info">
-                            <span class="fabricate-detail">3</span>
-                        </div>
-                    </div>
-                    <div class="fabricate-component" data-tooltip="Component Name">
-                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                        <div class="fabricate-info">
-                            <span class="fabricate-detail">3</span>
-                        </div>
-                    </div>
-                    <div class="fabricate-component" data-tooltip="Component Name">
-                        <img src="/icons/commodities/materials/bowl-liquid-red.webp">
-                        <div class="fabricate-info">
-                            <span class="fabricate-detail">3</span>
-                        </div>
-                    </div>
+                <div class="fabricate-essence-list">
+                    <span class="fabricate-essence-preview">
+                        <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                    </span>
+                    <span class="fabricate-essence-preview">
+                        2 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                    </span>
+                    <span class="fabricate-essence-preview">
+                        <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                    </span>
+                    <span class="fabricate-essence-preview">
+                        3 <i class="fa-solid fa-mortar-pestle" data-tooltip="Tooltip text"></i>
+                    </span>
                 </div>
             </td>
             <td class="fabricate-edit-item">
                 <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
                     <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                 </button>
-                <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id"
+                        data-tooltip="Delete recipe">
                     <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                 </button>
             </td>
